create div logo and tag nav

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <header>
-        <div class="header"></div>
+        <div class="header">
+            <div class="logo">My site</div>
+            <nav>
+                <ul class="nav">
+                    <li><a href="#">link-1</a></li>
+                    <li><a href="#">link-1</a></li>
+                    <li><a href="#">link-1</a></li>
+                    <li><a href="#">link-1</a></li>
+                    <li><a href="#">link-1</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
